# radar

./: .gitignore  README.md  calibrate.sh  start.sh  stop.sh
config/: RM2025_Points.yaml  camera_params.yaml  camera_params.yaml2  out_matrix.yaml
src/drone_detect/: CMakeLists.txt  package.xml
src/drone_detect/autoaim_manager/include/: autoaim_manager.h
src/drone_detect/autoaim_manager/src/: autoaim_manager.cpp
src/drone_detect/detect/include/: detect.h
src/drone_detect/detect/src/: detect.cpp
src/drone_detect/drone_detecter/include/: drone_detecter.h
src/drone_detect/drone_detecter/src/: drone_detecter.cpp
src/drone_detect/drone_pnp/include/: drone_pnp.h
src/drone_detect/drone_pnp/src/: drone_pnp.cpp
src/drone_detect/infer/include/: BaseInfer.hpp  yolos.hpp
src/drone_detect/infer/src/: yolo.cu
src/drone_detect/launch/: drone_detect.launch.py
src/drone_detect/model_detecter/include/: model_detecter.h
src/drone_detect/model_detecter/src/: model_detecter.cpp
src/drone_detect/model_pnp/include/: model_pnp.h
src/drone_detect/model_pnp/src/: model_pnp.cpp
src/drone_detect/pnp/include/: pnp.h
src/drone_detect/pnp/src/: pnp.cpp
src/fusion/debug_map/: debug_map.cpp
src/fusion/kalman_filter/: CMakeLists.txt
src/fusion/kalman_filter/include/: filter_plus.h
src/fusion/kalman_filter/src/: kalman_filter.cpp
src/lidar/cluster/: CMakeLists.txt
src/lidar/cluster/src/: cluster.cpp
src/lidar/dynamic_cloud/: CMakeLists.txt
src/lidar/dynamic_cloud/src/: dynamic_cloud.cpp
src/lidar/localization/: CMakeLists.txt
src/lidar/localization/src/: localization.cpp
src/livox_driver/livox_ros2_driver/: CMakeLists.txt
src/livox_driver/livox_sdk_vendor/: CMakeLists.txt
src/tdt_vision/: CMakeLists.txt  package.xml
src/tdt_vision/calibrate/include/: calibrate.h
src/tdt_vision/calibrate/src/: calibrate.cpp
src/tdt_vision/detect/include/: detect.h
src/tdt_vision/detect/src/: detect.cpp
src/tdt_vision/infer/: CMakeLists.txt
src/tdt_vision/launch/: calib_rosbag.launch.py  calibrate_radar.launch.py  radar.launch.py  radar_bringup.launch.py  run_rosbag.launch.py
src/tdt_vision/maps/: map.yaml
src/tdt_vision/resolve/include/: resolve.h
src/tdt_vision/resolve/src/: resolve.cpp
src/tdt_vision/utils/src/: radar_utils.cpp
src/utils/rosbag_player/: CMakeLists.txt  rosbag_player.cpp
