cmake_minimum_required(VERSION 3.8)
project(dynamic_cloud)
set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS 1)
set(CMAKE_BUILD_TYPE "RELEASE")
if(POLICY CMP0144)
  cmake_policy(SET CMP0144 NEW)
endif()
set(CMAKE_POLICY_DEFAULT_CMP0144 NEW)
if(POLICY CMP0074)
  cmake_policy(SET CMP0074 NEW)
endif()
set(CMAKE_POLICY_DEFAULT_CMP0074 NEW)
set(ENV{FLANN_ROOT} "")
set(ENV{PCL_ROOT} "")
unset(FLANN_ROOT)
unset(FLANN_ROOT CACHE)
unset(PCL_ROOT)
unset(PCL_ROOT CACHE)
find_package (ament_cmake_auto REQUIRED) 
ament_auto_find_build_dependencies ()

include_directories(include)

set(DYNAMIC_CLOUD "dynamic_cloud")
file(GLOB_RECURSE DYNAMIC_CLOUD_SRCS "src/*.cpp")

ament_auto_add_library(${DYNAMIC_CLOUD} SHARED
    ${DYNAMIC_CLOUD_SRCS}
)

target_link_libraries(${DYNAMIC_CLOUD} ${PCL_LIBRARIES})

rclcpp_components_register_node(${DYNAMIC_CLOUD}
    PLUGIN "tdt_radar::DynamicCloud"
    EXECUTABLE ${DYNAMIC_CLOUD}_node
)

target_link_libraries(dynamic_cloud_node ${PCL_LIBRARIES})
install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}/
)
ament_auto_package(USE_SCOPED_HEADER_INSTALL_DIR)
